# great-airdrones

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  README.md  package.xml  readme.md
Report/: Report.md
bags/baseHover1/: _slash_vrpn_client_node_slash_ardrone_slash_pose.csv  baseHover1.bag  baseHover1Calculations.ipynb  calculations.py
bags/odom_test/: _slash_ardrone_slash_navdata.csv  _slash_ardrone_slash_odometry.csv  _slash_ardrone_slash_true_position.csv  calculations.py  odometry_headers.txt  true_position_headers.txt
devel/: .catkin  .rosinstall  setup.sh
drone_twist_proxy/: CMakeLists.txt  package.xml
drone_twist_proxy/scripts/: drone_twist_proxy.py
great_ardrones/scripts/: ardrone.py  ardronecli.py  ardronecommands.py
scripts/: .qglviewer.xml  analyse_logfile1.py  ardrone.py  ardrone_cli.py  ardrone_cli_parser.py  ardrone_front.yaml  ardrone_getbatterystatus.sh  ardrone_status.sh  ardrone_wpa_supplicant_make.sh  ardroneautonomy.sh  ardronecli.py  ardronecommands.py  ardroneconnect.sh  ardroneparser.py  ardronestatus.sh  calc_error.py  calibration.cfg  crop16.py  cube.py  d_logfile1.txt  d_logfile_0.1.txt  d_logfile_0.2-0.4.txt  d_time_differences.txt  drone_position.py  getbattery.sh  go_to_location.py  go_up.py  great-ardrones.py  great_airdrones.py  great_ardrones.py  hover.py  logfile1.csv  lsd_slam_vrpn.csv  lsdslamcore.sh  makegray.py  p_logfile.txt  p_logfile_0.1.txt  pid_controller.py  pong.py  ptam_vrpn.csv  (+4 more)
src/: ardrone.py  pid_controller.cpp
wifiExecutables/: wpa_cli  wpa_passphrase  wpa_supplicant
(+9 files in other folders)
