<?xml version="1.0"?>
<package>
  <name>great_ardrones</name>
  <version>0.0.1</version>
  <description>The great_ardrones package</description>

  <maintainer email="josh_roy@brown.edu">Josh Roy</maintainer>


  <license>MIT</license>


  <author email="josh_roy@brown.edu">Josh Roy</author>
  <author email="yury_gitman@brown.edu">Yury Gitman</author>
  <author email="joshi_vidur@brown.edu">Joshi Vidur</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ardrone_autonomy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>vrpn_client_ros</build_depend>
  <run_depend>ardrone_autonomy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>vrpn_client_ros</run_depend>

  <run_depend>drone_twist_proxy</run_depend>
</package>
